Fix Read & Remove button overflow

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ dialog {
 
 .library-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 10px;
     margin: 10px;
     padding: 10px;
